--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="body-timer">
     <p><a href="index.html">Go back</a></p>
     <div class="input-group">
       <input type="text" id="datetime-picker" />
